# ProGramm

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  CMakeSettings.json  CYKAlgorithm.cpp  CYKAlgorithm.cpp~RF198270a9.TMP  CYKAlgorithm.h  CYKLink.cpp  CYKLink.h  CYKVisualiser.cpp  CYKVisualiser.cpp~RF1c5b671a.TMP  CYKVisualiser.cpp~RF718ebd.TMP  CYKVisualiser.h  EarleyChart.cpp  EarleyChart.h  EarleyParser.cpp  EarleyParser.h  FormalGrammar.cpp  FormalGrammar.h  FormalGrammar.sln  FormalGrammar.vcxproj  FormalGrammar.vcxproj.filters  LICENSE  Main.cpp  Makefile  Nonterminal.cpp  Nonterminal.h  Production.cpp  Production.h  README.adoc  README.md  STNode.cpp  STNode.h  Symbol.cpp  Symbol.h  SyntaxTree.cpp  SyntaxTree.h  Terminal.cpp  Terminal.h  (+5 more)
Debug/: FormalGrammar.exe.recipe  FormalGrammar.ilk  FormalGrammar.vcxproj.FileListAbsolute.txt
Debug/FormalGrammar.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FormalGrammar.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
FormalGrammar/: FormalGrammar.cpp  FormalGrammar.vcxproj  FormalGrammar.vcxproj.filters
doc/presentation/: Makefile  README.adoc  package-lock.json  package.json  presentation.adoc  presentation.html
docker/: Dockerfile
i18n/de/: pro_gramm.mo  pro_gramm.po
include/: AlphabetDisplay.hpp  AlphabetManager.hpp  ArgumentsDispatcher.hpp  CLIActions.hpp  CYKAlgorithm.hpp  CYKLink.hpp  CYKVisualisationTab.hpp  CYKVisualiser.hpp  ConfigLoader.hpp  ConfigManager.hpp  DummyGrammarParser.hpp  EngineFacade.hpp  FormalGrammar.hpp  GUIApplication.hpp  GUIVisualisationInterface.hpp  GUIVisualisationVisitor.hpp  GrammarConverter.hpp  GrammarEditor.hpp  GrammarOverviewTab.hpp  GrammarParser.hpp  MainWindow.hpp  ManagerTab.hpp  Nonterminal.hpp  PerformanceTests.hpp  Production.hpp  ProductionDisplay.hpp  ProductionManager.hpp  STNode.hpp  STVisualisationTab.hpp  STVisualiser.hpp  STreesVisualiser.hpp  SimpleWordParser.hpp  SplashScreen.hpp  StepsDisplay.hpp  Symbol.hpp  SyntaxTree.hpp  SyntaxTrees.hpp  Terminal.hpp  TextVisualisationVisitor.hpp  TimerDelay.hpp  (+25 more)
package/: pro_gramm  pro_gramm_gui.bat  pro_gramm_gui.sh
resources/: gui.fbp  gui.xrc  test.xrc
scripts/: pro_gramm_gui.bat  pro_gramm_gui.sh
src/: AlphabetDisplay.cpp  AlphabetManager.cpp  ArgumentsDispatcher.cpp  CLIActions.cpp  CYKAlgorithm.cpp  CYKLink.cpp  CYKVisualisationTab.cpp  CYKVisualiser.cpp  ConfigLoader.cpp  ConfigManager.cpp  DummyGrammarParser.cpp  FormalGrammar.cpp  GUIApplication.cpp  GUIVisualisationInterface.cpp  GUIVisualisationVisitor.cpp  GrammarConverter.cpp  GrammarEditor.cpp  GrammarOverviewTab.cpp  Main.cpp  MainWindow.cpp  ManagerTab.cpp  Nonterminal.cpp  PerformanceTests.cpp  Production.cpp  ProductionDisplay.cpp  ProductionManager.cpp  STNode.cpp  STVisualisationTab.cpp  SplashScreen.cpp  StepsDisplay.cpp  Symbol.cpp  SyntaxTree.cpp  Terminal.cpp  TextVisualisationVisitor.cpp  TimerDelay.cpp  TreeRenderer.cpp  VisualisationTab.cpp  VisualisationWidget.cpp  Word.cpp  WordParser.cpp  (+4 more)
tests/: TextVisualisationVisitorTest.cpp  dummy_test.cpp  integration_test.sh
